[tool.poetry]
name = "burgers_and_shakeland"
version = "0.1.0"
description = ""
authors = ["David <david.ostler001@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
dbt-postgres = "^1.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
